@@ -972,6 +972,65 @@ operator|)
 return|;
 block|}
 block|}
+comment|/*    * Does the move task involve moving to a local file system    */
+specifier|public
+name|boolean
+name|isLocal
+parameter_list|()
+block|{
+name|loadTableDesc
+name|tbd
+init|=
+name|work
+operator|.
+name|getLoadTableWork
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|tbd
+operator|!=
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+name|loadFileDesc
+name|lfd
+init|=
+name|work
+operator|.
+name|getLoadFileWork
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|lfd
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|lfd
+operator|.
+name|getIsDfsDir
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+else|else
+return|return
+literal|true
+return|;
+block|}
+return|return
+literal|false
+return|;
+block|}
 block|}
 end_class
 
