@@ -157,6 +157,24 @@ name|ql
 operator|.
 name|exec
 operator|.
+name|MoveTask
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|exec
+operator|.
 name|Operator
 import|;
 end_import
@@ -848,7 +866,6 @@ comment|// Has the user enabled merging of files for map-only jobs or for all jo
 if|if
 condition|(
 operator|(
-operator|(
 name|ctx
 operator|.
 name|getMvTask
@@ -867,9 +884,28 @@ operator|.
 name|isEmpty
 argument_list|()
 operator|)
-operator|)
-operator|&&
-operator|(
+condition|)
+block|{
+name|List
+argument_list|<
+name|Task
+argument_list|<
+name|?
+extends|extends
+name|Serializable
+argument_list|>
+argument_list|>
+name|mvTasks
+init|=
+name|ctx
+operator|.
+name|getMvTask
+argument_list|()
+decl_stmt|;
+comment|// In case of unions or map-joins, it is possible that the file has already been seen.
+comment|// So, no need to attempt to merge the files again.
+if|if
+condition|(
 operator|(
 name|ctx
 operator|.
@@ -894,9 +930,42 @@ operator|)
 name|nd
 argument_list|)
 operator|)
-operator|)
 condition|)
 block|{
+comment|// no need of merging if the move is to a local file system
+name|MoveTask
+name|mvTask
+init|=
+operator|(
+name|MoveTask
+operator|)
+name|findMoveTask
+argument_list|(
+name|mvTasks
+argument_list|,
+operator|(
+name|FileSinkOperator
+operator|)
+name|nd
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|mvTask
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|!
+name|mvTask
+operator|.
+name|isLocal
+argument_list|()
+condition|)
+block|{
+comment|// There are separate configuration parameters to control whether to merge for a map-only job
+comment|// or for a map-reduce job
 if|if
 condition|(
 operator|(
@@ -950,6 +1019,8 @@ name|chDir
 operator|=
 literal|true
 expr_stmt|;
+block|}
+block|}
 block|}
 name|String
 name|finalName
